Fixed problem with line breaks in CSV import. Started work on splitting out for admin and initial setup for setup

--- a/PHP/css/default.css
+++ b/PHP/css/default.css
@@ -68,11 +68,7 @@ body {
     margin: 0 auto;
     padding-top: 50;
   }
-
-  div.results {
-    margin-top: 10;
-  }
-
+  
   div:empty {
     display: none;
  }
