--- a/PHP/css/setup.css
+++ b/PHP/css/setup.css
@@ -26,10 +26,14 @@ body {
 
   tr {
    width: 100%;
-   
+   cursor: pointer;
   }
   
-  
+  tr:hover {
+    background-color:#485563;
+    color: white;
+  }
+
   .button {
     width: 100%;
     background-color: #485563;
@@ -62,6 +66,7 @@ body {
     padding: 20px;
     width: 80%;    
     margin: 0 auto;
+    padding-top: 50;
   }
 
   div.results {
@@ -85,7 +90,11 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #485563;
+    position: fixed;
+    top: 0;
+    width: 100%;      
+    
   }
   
   li {
@@ -100,4 +109,5 @@ body {
   li:hover {
     background-color: #111;
     cursor: pointer;
+    
   }
